--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <script language="javascript">
 setTimeout(function(){
- var arr=["https://dasd123312jd122.micy.cc","https://fgfdg112.strayyun.xyz","http://qwe123123.mitu.icu","https://rfgfgdfr89.stray.cyou","https://sdsd123121vvf.mikasa.cyou","https://grfgjkeldjg121.bilibilimisaa.xyz"];
+ var arr=["https://sada123.mitucloud.xyz","https://sdew12.cycycy123.xyz","https://gth56.cycycy123.top","https://ghj27.110999.xyz","https://jytj78.110988.xyz","https://dasd12.micy.cc","https://fg112.straycloud.xyz","http://q23.mitu.icu","https://rfr89.stray.cyou","https://s1vv.mikasa.cyou","https://gr91.bilibilimisaa.xyz","https://gg91.bilibilimisaa.top","https://ggre91.mikasavideo.com","https://h45i1.mikasavideo.xyz","https://h4g5i1.mituzj.com"];
     window.location.href=arr[parseInt(Math.random()*arr.length)];
  },1);
 </script>
