--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <script language="javascript">
 setTimeout(function(){
- var arr=["http://sada123.mitucloud.xyz","http://sdew12.cycycy123.xyz","http://gth56.cycycy123.top","http://ghj27.110999.xyz","http://jytj78.110988.xyz","http://dasd12.micy.cc","http://fg112.straycloud.xyz","http://q23.mitu.icu","http://rfr89.stray.cyou","http://s1vv.mikasa.cyou","http://gr91.bilibilimisaa.xyz","http://gg91.bilibilimisaa.top","http://ggre91.mikasavideo.com","http://h45i1.mikasavideo.xyz","http://h4g5i1.mituzj.com"];
+ var arr=["http://sdew12.cycycy123.xyz","http://gth56.cycycy123.top","http://ghj27.110999.xyz","http://jytj78.110988.xyz","http://dasd12.micy.cc","http://fg112.straycloud.xyz","http://q23.mitu.icu","http://rfr89.stray.cyou","http://s1vv.mikasa.cyou","http://gr91.bilibilimisaa.xyz","http://gg91.bilibilimisaa.top","http://ggre91.mikasavideo.com","http://h45i1.mikasavideo.xyz"];
     window.location.href=arr[parseInt(Math.random()*arr.length)];
  },1);
 </script>
